# vkit

./: CMakeLists.txt
include/frank/: application.hpp  renderer.hpp
include/vkit/: application.hpp  renderer.hpp
src/Application/: application.cpp
src/Renderer/: renderer.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
